feat: Add scoreboard and gallery with cards

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,9 @@
   --bg-clr: #fff;
   --bg-clr-sec: rgb(240, 240, 240);
   --common-bdr-radius: 8px;
+  --common-padding: 0.5em 1em;
+  --common-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 @media (prefers-color-scheme: dark) {
