--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -1,10 +1,10 @@
 .scoreboard {
-  border: 1px solid #000;
   border-radius: var(--common-bdr-radius);
   padding: var(--common-padding);
   text-align: center;
   width: max-content;
   margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 @media (max-width: 600px) {
