--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -5,6 +5,7 @@
   width: max-content;
   margin: 0 auto;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: var(--bg-clr-sec);
 }
 
 @media (max-width: 600px) {
