--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,10 +1,25 @@
 .gallery {
-  /* border: 1px solid #000; */
   border-radius: var(--common-bdr-radius);
   padding: 1em;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
   gap: 15px;
+  justify-content: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: var(--bg-clr-sec);
+}
+
+.progress {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-weight: 700;
+}
+
+progress {
+  height: 40px;
 }
 
 @media (max-width: 600px) {
