--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 #root {
   max-width: 1800px;
   padding: 1rem;
+  min-width: 100vw;
 }
 
 @media (max-width: 600px) {
@@ -10,7 +11,7 @@
 @media (min-width: 601px) {
   /* common to tablets and desktops */
   #root {
-    padding: 2rem;
+    padding: 1rem;
   }
 }
 
