--- a/src/styles/Logo.css
+++ b/src/styles/Logo.css
@@ -11,6 +11,10 @@
 
 @media (max-width: 600px) {
   /* phones only */
+  .logo img.inGAme {
+    width: 50vw;
+    margin: 0 auto 20px;
+  }
 }
 
 @media (min-width: 601px) {
@@ -18,6 +22,14 @@
   .logo img {
     max-width: 550px;
     border-radius: var(--common-bdr-radius);
+  }
+
+  .logo img.inGAme {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    max-width: 15vw;
+    cursor: pointer;
   }
 }
 
