--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,18 +11,21 @@
 :root {
   --txt-clr: #000;
   --bg-clr: #fff;
-  --bg-clr-sec: rgb(240, 240, 240);
+  --bg-clr-sec: #fff;
+  --accent-clr: rgb(240, 240, 240);
   --common-bdr-radius: 8px;
   --common-padding: 0.5em 1em;
   --common-box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  --marvel-logo-red: #ed171f;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --txt-clr: #fff;
-    --bg-clr: #242424;
-    --bg-clr-sec: #121212;
+    --bg-clr: #121212;
+    --bg-clr-sec: #242424;
+    --accent-clr: #121212;
   }
 }
 
@@ -32,6 +35,9 @@ body {
   font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   min-width: 320px;
   min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -47,7 +53,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   transition: border-color 0.25s;
-  background-color: var(--bg-clr-sec);
+  background-color: var(--accent-clr);
   color: inherit;
 }
 button:focus,
